--- a/Assignment7/Single Webpage/index.html
+++ b/Assignment7/Single Webpage/index.html
@@ -9,7 +9,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'UA-151466656-1');
+        gtag('config', 'UA-151466656-1', { 'optimize_id': 'GTM-PQH384L'});
         </script>
 
         <meta charset="utf-8">
