--- a/Website/index.html
+++ b/Website/index.html
@@ -26,6 +26,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.js"></script>
         <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <style type="text/css">
             #map {
                        height: 100%;
@@ -182,6 +183,7 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <iframe class="airtable-embed" src="https://airtable.com/embed/shroioXVkaBDRmPwf?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
                                             <!------------------------------------------------>
                                             <div class="row">
                                                 <div class="table-responsive">
