--- a/Website/index.html
+++ b/Website/index.html
@@ -140,7 +140,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- Gallery -->&gt;
+                <!-- Gallery -->
+                <section class="page-section" id="gallery"></section>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
@@ -217,7 +218,6 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <iframe class="airtable-embed" src="https://airtable.com/embed/shroioXVkaBDRmPwf?backgroundColor=yellow&viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
                                             <!------------------------------------------------>
                                             <div class="row">
                                                 <div class="table-responsive">
@@ -331,7 +331,7 @@
                                                                 <p></p>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                             </div>
                                                 </div>
                                             </section>
                                             <!-- Map -->
@@ -344,24 +344,19 @@
                                                         </div>
                                                     </div>
                                                     <div id="button" align="center">
-                                                        <button type="button" style="font-size:20px; height:50px; width:100;background: #dfec68;"
-                                                        class="btn btn-success btn-lg" onclick="show_districts1();">Top Attractions</button>
-                                                        <button type="button" style="font-size:20px; height:50px; width:100;background: #68d3e6;"
-                                                        class="btn btn-success btn-lg" onclick="show_districts2();">Top Entertainment</button>
-                                                        <button type="button" style="font-size:20px; height:50px; width:100;background: #529de4;"
-                                                        class="btn btn-success btn-lg" onclick="show_districts3();">Top shopping</button>
-                                                        <button type="button" style="font-size:20px; height:50px; width:100;background: #69e4a0;"
-                                                        class="btn btn-success btn-lg" onclick="show_districts4();">Top Nightlife</button>
-                                                    </div>
-                                                    <br>
-                                                    <div id="map" style="width: 650px; height: 480px; border: 1px solid #AAA; margin-left: auto; margin-right: auto;">
-                                                        <button type="button" class="btn btn-info" onclick="clear_markers();">Clear Markers</button>
-                                                    </div>
-                                                    <br>
-                                                </div>
-                                            </section>
-                                        </section>
-                                    </div>
+                                                            <button type="button" style="font-size:20px; height:50px; width:100;background: #dfec68;"
+                                                            class="btn btn-success btn-lg" onclick="show_districts1();">Top Attractions</button>
+                                                            <button type="button" style="font-size:20px; height:50px; width:100;background: #68d3e6;"
+                                                            class="btn btn-success btn-lg" onclick="show_districts2();">Top Entertainment</button>
+                                                            <button type="button" style="font-size:20px; height:50px; width:100;background: #529de4;"
+                                                            class="btn btn-success btn-lg" onclick="show_districts3();">Top shopping</button>
+                                                            <button type="button" style="font-size:20px; height:50px; width:100;background: #69e4a0;"
+                                                            class="btn btn-success btn-lg" onclick="show_districts4();">Top Nightlife</button>
+                                                        </div><br>
+                                                          <div id="map" style="width: 650px; height: 480px; border: 1px solid #AAA; margin-left: auto; margin-right: auto;"><button type="button" class="btn btn-info" onclick="clear_markers();">Clear Markers</button></div><br>
+                                                        </div>
+                                                        </section>
+                                    
                                     <!-- Clients -->
                                     <section class="py-5">
                                         <div class="container">
@@ -913,7 +908,7 @@
                                         </div>
                                     </div>
                                     <!-- Bootstrap core JavaScript -->
-                                    <script src="vendor/jquery/jquery.min.js"></script>
+                                    <script src="https://github.com/jindanyang/jindanyang.github.io/blob/master/Website/vendor/jquery-easing/jquery.easing.min.js"></script>
                                     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
                                     <script src="js/agency.js"></script>
                                     <!-- Plugin JavaScript -->
