--- a/Website/index.html
+++ b/Website/index.html
@@ -271,7 +271,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/Activities/3.jpg" alt="">
+            <img class="img-fluid" src="img/activities/3.jpg" alt="">
           </a>
                                                             <div class="portfolio-caption">
                                                                 <h4>Hollywood
