--- a/Website/index.html
+++ b/Website/index.html
@@ -16,11 +16,11 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        
-        ga('create', 'GTM-PQH384L', 'auto');
+        ga('require', 'GTM-PQH384L');
+        ga('create', 'UA-151466656-1', 'auto');
         ga('send', 'pageview');
         </script>
-        <!-- End Google Analytics --> 
+        <!-- End Google Analytics -->
 
        <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151466656-1"></script>
