--- a/Website/index.html
+++ b/Website/index.html
@@ -9,18 +9,7 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-TJKHDKK');</script>
         <!-- End Google Tag Manager -->
-    
-        <!-- Google Analytics -->
-        <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('require', 'GTM-PQH384L');
-        ga('create', 'UA-151466656-1', 'auto');
-        ga('send', 'pageview');
-        </script>
-        <!-- End Google Analytics -->
+   
 
        <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151466656-1"></script>
@@ -28,7 +17,7 @@
        window.dataLayer = window.dataLayer || [];
        function gtag(){dataLayer.push(arguments);}
        gtag('js', new Date());
-       gtag('config', 'UA-151466656-1');
+       gtag('config', 'UA-151466656-1', { 'optimize_id': 'GTM-PQH384L'});
        </script>
 
         <meta charset="utf-8">
