--- a/Website/index.html
+++ b/Website/index.html
@@ -9,7 +9,8 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-TJKHDKK');</script>
         <!-- End Google Tag Manager -->
-   
+    
+    
 
        <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151466656-1"></script>
@@ -201,9 +202,11 @@
                                         <section class="page-section" id="restaurants">
                                             <div class="container">
                                                 <div class="row">
-                                                    <div class="col-lg-12 text-center">
+                                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                                        <div class="section-headline text-center">
                                                         <h2 class="section-heading text-uppercase">Restaurants</h2>
                                                         <h3 class="section-subheading text-muted">Craving for food. Find what are the best places to eat in L.A..</h3>
+                                                    </div>
                                                     </div>
                                                 </div>
                                             </div>
