--- a/Website/index.html
+++ b/Website/index.html
@@ -79,7 +79,7 @@
                             <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link js-scroll-trigger" href="#experiences">Experiences</a>
+                            <a class="nav-link js-scroll-trigger" href="#experiences">Things to do</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="#restaurants">Restaurants</a>
@@ -105,7 +105,7 @@
                     <div class="intro-heading text-uppercase">Los Angeles</div>
                     <a class="venobox play-btn mb-4" href="https://youtu.be/WCJ2LSYLbMI"
                     id="home_page_video" data-vbtype="video" data-autoplay="true"></a>
-                    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#video">Explore the city</a>
+                    <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#video">Explore it now</a>
                 </div>
             </div>
         </header>
@@ -132,7 +132,6 @@
                     </div>
                 </div>
                 <!-- Gallery -->
-                <section class="page-section" id="gallery"></section>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
@@ -338,22 +337,22 @@
                                                 <div class="container">
                                                     <div class="row">
                                                         <div class="col-md-3 col-sm-6">
-                                                            <a href="#">
+                                                            <a href="https://www.yelp.com/city/la">
             <img class="img-fluid d-block mx-auto" src="img/logos/1.png" alt="">
           </a>
                                                         </div>
                                                         <div class="col-md-3 col-sm-6">
-                                                            <a href="#">
+                                                            <a href="https://www.booking.com/searchresults.html?city=20014181">
             <img class="img-fluid d-block mx-auto" src="img/logos/2.png" alt="">
           </a>
                                                         </div>
                                                         <div class="col-md-3 col-sm-6">
-                                                            <a href="#">
+                                                            <a href="https://zh.airbnb.com/s/los-angeles/all?query=los+angeles">
             <img class="img-fluid d-block mx-auto" src="img/logos/3.png" alt="">
           </a>
                                                         </div>
                                                         <div class="col-md-3 col-sm-6">
-                                                            <a href="#">
+                                                            <a href="https://www.tripadvisor.com/Tourism-g32655-Los_Angeles_California-Vacations.html">
             <img class="img-fluid d-block mx-auto" src="img/logos/4.png" alt="">
           </a>
                                                         </div>
@@ -366,7 +365,6 @@
                                                     <div class="row">
                                                         <div class="col-lg-12 text-center">
                                                             <h2 class="section-heading text-uppercase">Contact Us</h2>
-                                                            
                                                         </div>
                                                     </div>
                                                     <div class="row">
@@ -412,7 +410,7 @@
                                             <!-- Footer -->
                                             <div class="container">
                                                 <div class="copyright">© Copyright
-                                                    <strong>Los Angeles Travel Guide </strong>All Rights Reserved</div>
+                                                    <strong>Los Angeles Travel Guide</strong>All Rights Reserved</div>
                                                 <div class="credits">
                                                     <!-- All the links in the footer should remain intact. You can delete
                                                     the links only if you purchased the pro version. Licensing information:
@@ -606,7 +604,7 @@
                                                                             <li>Duration:&nbsp;1 day</li>
                                                                         </ul>
                                                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                                                            <i class="fas fa-times"></i>Close Project</button>
+                                                                            <i class="fas fa-times"></i>Close</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -658,7 +656,7 @@
                                                                             <li>Duration: 2.5 hours</li>
                                                                         </ul>
                                                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                                                            <i class="fas fa-times"></i>Close Project</button>
+                                                                            <i class="fas fa-times"></i>Close</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -702,7 +700,7 @@
                                                                             <li>Duration: 1.25 hours</li>
                                                                         </ul>
                                                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                                                            <i class="fas fa-times"></i>Close Project</button>
+                                                                            <i class="fas fa-times"></i>Close</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -755,7 +753,7 @@
                                                                             </li>
                                                                         </ul>
                                                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                                                            <i class="fas fa-times"></i>Close Project</button>
+                                                                            <i class="fas fa-times"></i>Close</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -802,7 +800,7 @@
                                                                             <li>Duraratio: 3 hours</li>
                                                                         </ul>
                                                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                                                            <i class="fas fa-times"></i>Close Project</button>
+                                                                            <i class="fas fa-times"></i>Close</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -851,7 +849,7 @@
                                                                             <li>Duration: 6 hours</li>
                                                                         </ul>
                                                                         <button class="btn btn-primary" data-dismiss="modal" type="button">
-                                                                            <i class="fas fa-times"></i>Close Project</button>
+                                                                            <i class="fas fa-times"></i>Close</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
