--- a/Website/index.html
+++ b/Website/index.html
@@ -145,7 +145,7 @@
                             <section class="page-section" id="experiences">
                                 <div class="container">
                                     <!-- Experiences Section Heading -->
-                                    <h1 class="section-heading text-uppercase">Experiences</h1>
+                                    <h1 class="section-heading text-uppercase">Things to do</h1>
                                     <h3 class="section-subheading text-muted">Here's a guide of different experiences you can have in L.A.</h3>
                                     <!--
                                     Experiences Grid Items -->
