--- a/Website/index.html
+++ b/Website/index.html
@@ -132,6 +132,7 @@
                     </div>
                 </div>
                 <!-- Gallery -->
+                <section class="page-section" id="gallery"></section>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
