--- a/Website/index.html
+++ b/Website/index.html
@@ -136,9 +136,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 text-center">
-                            <h2 class="section-heading text-uppercase">
-                                <br>
-                                <br>Gallery</h2>
+                            <h1 class="section-heading text-uppercase">Gallery</h1>
                             <h3 class="section-subheading text-muted">Check out some stunning photoes of L.A.</h3>
                             <iframe src="https://albumizr.com/a/PdUp"
                             scrolling="no" frameborder="0" allowfullscreen="" width="700" height="400"></iframe>
@@ -366,6 +364,7 @@
                                                     <div class="row">
                                                         <div class="col-lg-12 text-center">
                                                             <h2 class="section-heading text-uppercase">Contact Us</h2>
+                                                            
                                                         </div>
                                                     </div>
                                                     <div class="row">
